# kurage

./: Cargo.toml  README.md
.github/workflows/: release-crate.yml
kurage_macro_rules/: Cargo.toml  lib.rs
kurage_proc_macros/: Cargo.toml  lib.rs
src/: fluent.rs  lib.rs  page.rs  shortcuts.rs
