[workspace]
members = ["kurage_proc_macros"]

[package]
name = "kurage"
version = "0.1.0"
edition = "2021"
description = "Helper functions/macros for development with relm4"
license = "GPL-3.0-or-later"
repository = "https://github.com/FyraLabs/kurage"
readme = "README.md"
keywords = ["relm4", "gtk", "gtk4"]

[dependencies]
kurage_proc_macros = { path = "kurage_proc_macros" }
paste = "1.0.15"
relm4 = { version = "0.9.1", default-features = false, features = ["macros"] }
tracing = { version = "0.1.41", optional = true, default-features = false }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[build-dependencies]
# doc-tests require gtk4
relm4 = { version = "0.9.1", features = ["macros", "gnome_47"] }
