[package]
name = "kurage_macro_rules"
version = "0.1.4"
edition = "2021"
description = "macro_rules! for kurage"
license = "GPL-3.0-or-later"
repository = "https://github.com/FyraLabs/kurage"
readme = "../README.md"
keywords = ["relm4", "gtk", "gtk4"]
categories = ["gui"]

[lib]
path = "./lib.rs"

[dependencies]
paste = "1.0.15"
relm4 = { version = "0.9.1", default-features = false, features = ["macros"] }
tracing = { version = "0.1.41", optional = true, default-features = false }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dev-dependencies]
# doc-tests require gtk4
relm4 = { version = "0.9.1", features = ["macros", "gnome_47"] }

[lints]
workspace = true
