[package]
name = "kurage_proc_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
path = "./lib.rs"

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.96"

[dev-dependencies]
kurage = { package = "kurage_macro_rules", path = "../kurage_macro_rules" }

[lints]
workspace = true
